See README and version control log for Test::Builder2 changes.

1.005000_006
    Bug Fixes
    * Patched TB2::Mouse to not blow over tied $_ (a local $_ bug).
      (Father Chrysostomos) [github 293]
    * Test::Builder::Tester will now set a plan in test tests emulating
      an undocumented feature that some tests accidentally rely on.
      [github 327] [github 328]

    Misc
    * Update the resources meta data to point at the correct repository, issues
      mailing list and home page.

    Incompatible Changes
    * The result of each test is no longer stored by default.  This keeps
      the test framework from consuming more and more memory as tests are
      run.  Test::Builder->details and Test::Builder->summary will throw
      exceptions by default.  For most needs, they are replaced with
      statistical methods in TB2::History. [github 198]


1.005000_005  Thu Apr 26 15:23:25 PDT 2012
    New Features
    * cmp_ok() will error when used with something which is not a
      comparison operator, including =, += and the like.
      [github 141]

    Bug Fixes
    * Using a reference as a test name works again.  [github #264]
    * Protected against Test::More accidentally overwriting $!
      [github #268] [github #266]
    * Restored the behavior of a fork, it will not issue its own
      plan, making testing with fork easier.
    * Test::Builder->name() has been restored. [github #220]
      (Matthew Horsfall)
    * TB2::BlackHole no longer tries to AUTOLOAD its destructor.
      [github #280] (Peter Rabbitson)
    * Threads work on 5.12 and 5.10 again. (Peter Rabbitson)

    Doc Fixes
    * use_ok() has been discouraged and de-emphasized as a general
      replacement for `use` in tests. [github #288]

    Incompatible Changes with previous alphas
    * TB2::Counter has been removed [github 119]
    * The test counter has been moved from the TAP formatter
      into TB2::History [github 190]
    * TB2::TestState is no longer a complete subclass of